# lydia

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  AUTHORS.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  HISTORY.md  README.md  gcovr.cfg
app/lydia/test/: CMakeLists.txt
app/lydia/test/src/: test_main.cpp
app/mona2sym/: CMakeLists.txt
app/mona2sym/src/: main.cpp
app/mona2sym/test/: CMakeLists.txt
app/parser/: CMakeLists.txt
app/parser/src/: main.cpp
benchmark/: CMakeLists.txt
benchmark/src/: dfa.cpp  logic.cpp  main.cpp  pl.cpp  to_dfa.cpp
lib/: CMakeLists.txt
lib/benchmark/: CMakeLists.txt
lib/benchmark/src/: dfa.cpp  logic.cpp  main.cpp  pl.cpp  to_dfa.cpp  translate.cpp
lib/include/: atom_visitor.hpp  basic.hpp  delta.hpp  delta_sat.hpp  dfa.hpp  logger.hpp  logic.hpp  nnf.hpp  propositional_logic.hpp  symbol.hpp  translate.hpp  types.hpp  visitor.hpp
lib/include/dfa_transform/: dfa_state.hpp  nfa_state.hpp  translate.hpp
lib/include/lydia/: atom_visitor.hpp  basic.hpp  dfa.hpp  logger.hpp  logic.hpp  mona_ext.hpp  nnf.hpp  symbol.hpp  types.hpp  visitor.hpp
lib/include/lydia/ast/: base.hpp
lib/include/lydia/dfa/: abstract_dfa.hpp  dfa.hpp  mona_dfa.hpp
lib/include/lydia/ldlf/: only_test.hpp
lib/include/lydia/logic/: ast.hpp  atom_visitor.hpp  nnf.hpp  symbol.hpp  to_ldlf.hpp
lib/include/lydia/logic/ldlf/: base.hpp  only_test.hpp  test_free.hpp
lib/include/lydia/logic/ltlf/: base.hpp  duality.hpp
lib/include/lydia/logic/pl/: base.hpp  cnf.hpp  eval.hpp  prop_to_bdd.hpp  replace.hpp
lib/include/lydia/logic/pl/models/: base.hpp  naive.hpp  sat.hpp
lib/include/lydia/mona_ext/: mona_ext_base.hpp
lib/include/lydia/parser/: abstract_driver.hpp  driver.cpp  driver.hpp  lexer.l  parser.yy  parser_stype.h  scanner.hpp
lib/include/lydia/parser/ldlf/: CMakeLists.txt  driver.cpp  driver.hpp  lexer.l  parser.yy  parser_stype.h  scanner.hpp  scanner_internal.hpp
lib/include/lydia/parser/ltlf/: CMakeLists.txt  driver.cpp  driver.hpp  lexer.l  parser.yy  parser_stype.h  scanner.hpp  scanner_internal.hpp
lib/include/lydia/pl/: cnf.hpp  eval.hpp  logic.hpp  models.hpp  models_sat.hpp  replace.hpp
lib/include/lydia/pl/models/: base.hpp  naive.hpp  sat.hpp
lib/include/lydia/to_dfa/: core.hpp  delta.hpp  delta_symbolic.hpp  dfa_state.hpp  nfa_state.hpp  strategies.hpp  translate.hpp
lib/include/lydia/to_dfa/strategies/: naive.hpp  sat.hpp
lib/include/lydia/to_dfa/strategies/bdd/: base.hpp  delta_bdd.hpp
lib/include/lydia/to_dfa/strategies/compositional/: base.hpp  delta_compositional.hpp  star.hpp
lib/include/lydia/utils/: benchmark.hpp  compare.hpp  cudd.hpp  dfa_transform.hpp  misc.hpp  print.hpp  strings.hpp
lib/include/pl/: cnf.hpp  eval.hpp  logic.hpp  models.hpp  models_sat.hpp
lib/include/to_dfa/: dfa_state.hpp
lib/include/utils/: benchmark.hpp  compare.hpp  dfa_transform.hpp  misc.hpp  powerset.hpp  print.hpp  strings.hpp
lib/parser/: FlexLexer.h  driver.cpp  driver.hpp  lexer.l  location.hh  mc_lexer.yy.cc  mc_parser.tab.cc  mc_parser.tab.hh  parser.yy  parser_stype.h  scanner.hpp
lib/src/: atom_visitor.cpp  basic.cpp  delta.cpp  delta_sat.cpp  dfa.cpp  logger.cpp  logic.cpp  mona_ext.cpp  nnf.cpp  propositional_logic.cpp  symbol.cpp  translate.cpp  visitor.cpp
lib/src/ast/: base.cpp  ldlf.cpp  ltlf.cpp  pl.cpp  regex.cpp
lib/src/dfa/: dfa.cpp  mona_dfa.cpp
lib/src/ldlf/: logic.cpp  only_test.cpp
lib/src/logic/: to_ldlf.cpp
lib/src/logic/ldlf/: base.cpp  only_test.cpp  test_free.cpp
lib/src/logic/ltlf/: base.cpp  duality.cpp
lib/src/logic/pl/: base.cpp  cnf.cpp  eval.cpp  prop_to_bdd.cpp  replace.cpp
lib/src/logic/pl/models/: sat.cpp
lib/src/mona_ext/: mona_ext_base.cpp  project.cpp
lib/src/pl/: cnf.cpp  eval.cpp  logic.cpp  models.cpp  models_sat.cpp  replace.cpp
lib/src/pl/models/: sat.cpp
lib/src/to_dfa/: core.cpp  delta.cpp  delta_symbolic.cpp  dfa_state.cpp  nfa_state.cpp  translate.cpp
lib/src/to_dfa/strategies/: naive.cpp  sat.cpp
lib/src/to_dfa/strategies/bdd/: base.cpp  delta_bdd.cpp
lib/src/to_dfa/strategies/compositional/: base.cpp  delta_compositional.cpp  star.cpp
lib/src/utils/: cudd.cpp  dfa_transform.cpp  print.cpp  strings.cpp
lib/test/: CMakeLists.txt
lib/test/src/: logger_test.cpp  main.cpp  test_dfa.cpp  test_ldlf.cpp  test_logger.cpp  test_logic.cpp  test_misc.cpp  test_nnf.cpp  test_parser.cpp  test_powerset.cpp  test_print.cpp  test_propositional_logic.cpp  test_strings.cpp  test_symbol.cpp  test_translate.cpp
lib/test/src/assets/: formulas.hpp
lib/test/src/assets/datasets/lisa_examples/lisa/: cc.ltlf  counter_1.ltlf  counter_2.ltlf  counters_1.ltlf  counters_2.ltlf  ltlf3377.ltlf  req.ltlf  req1.ltlf
lib/test/src/assets/datasets/lisa_examples/lydia/: cc.ldlf  counter_1.ldlf  counter_2.ldlf  counters_1.ldlf  counters_2.ldlf  ltlf3377.ldlf  req.ldlf  req1.ldlf
lib/test/src/assets/datasets/lisa_examples/mona/: cc.mona  counter_1.mona  counter_2.mona  counters_1.mona  counters_2.mona  ltlf3377.mona  req.mona  req1.mona
lib/test/src/assets/datasets/ltlf_1/lydia/: 010.ldlf  014.ldlf  015.ldlf  017.ldlf  019.ldlf  022.ldlf  (+44 more)
lib/test/src/assets/mona/: always_a.dfa  mona_example.dfa
lib/test/src/data/: formulas.hpp
lib/test/src/data/mona/: eventually_a.dfa
lib/test/src/integration_tests/: test_syft.cpp
lib/test/src/test_ast/: test_pl.cpp
lib/test/src/test_dfa/: test_dfa.cpp  test_mona_dfa.cpp
lib/test/src/test_to_dfa/: basic_tests.cpp  prime_implicants.cpp  property_tests.cpp
lib/test/src/unit_tests/: test_ldlf.cpp  test_logger.cpp  test_ltlf.cpp  test_misc.cpp  test_mona_ext.cpp  test_nnf.cpp  test_parser.cpp  test_print.cpp  test_propositional_logic.cpp  test_strings.cpp  test_symbol.cpp
lib/test/src/unit_tests/test_dfa/: test_dfa.cpp  test_mona_dfa.cpp
lib/test/src/unit_tests/test_parser/: test_ldlf.cpp  test_ltlf.cpp
lib/test/src/unit_tests/test_to_dfa/: basic_tests.cpp  ldlf_tests.cpp  ltlf_tests.cpp  property_tests.cpp
lib/test/src/utils/: acceptance_test.cpp  acceptance_test.hpp  print_dfa.hpp  to_dfa.cpp  to_dfa.hpp
(+86 files in other folders)
